--- a/IntroductionToJulia_CAD_LAB/CAD_Lab_4.ipynb
+++ b/IntroductionToJulia_CAD_LAB/CAD_Lab_4.ipynb
@@ -30,21 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db45fc6d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\amiya\\.julia\\environments\\v1.11\\Project.toml`\n",
-      "  \u001b[90m[2774e3e8] \u001b[39m\u001b[92m+ NLsolve v4.5.1\u001b[39m\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\amiya\\.julia\\environments\\v1.11\\Manifest.toml`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using Pkg; \n",
     "# Pkg.add(\"NLsolve\")"
@@ -60,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ec020cf4",
    "metadata": {},
    "outputs": [],
@@ -82,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "id": "2440b2c0",
    "metadata": {},
    "outputs": [
@@ -125,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "id": "1ac93fd6",
    "metadata": {},
    "outputs": [
@@ -161,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "id": "08002329",
    "metadata": {},
    "outputs": [
@@ -206,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "id": "2dc519b9",
    "metadata": {},
    "outputs": [
@@ -228,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "cb9cbd2c",
    "metadata": {},
    "outputs": [
@@ -271,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "id": "1b36a7f2",
    "metadata": {},
    "outputs": [
@@ -325,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "id": "b2fbb701",
    "metadata": {},
    "outputs": [
@@ -346,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "id": "552b95ea",
    "metadata": {},
    "outputs": [
@@ -386,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "id": "8cf1d71c",
    "metadata": {},
    "outputs": [
@@ -412,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "25159849",
    "metadata": {},
    "outputs": [
@@ -446,7 +435,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
+   "id": "7f999d11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "1 + \\left( 1 + x \\right)^{2}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "1 + (1 + x)^2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x=(1 +x^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "id": "9b2dd9e8",
    "metadata": {},
    "outputs": [
@@ -482,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "id": "084360b1",
    "metadata": {},
    "outputs": [
@@ -503,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "17572b0d",
    "metadata": {},
    "outputs": [
@@ -547,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b0ac6816",
    "metadata": {},
    "outputs": [
@@ -581,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "id": "7694290b",
    "metadata": {},
    "outputs": [
@@ -614,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "c362f19e",
    "metadata": {},
    "outputs": [
@@ -655,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "555fe80f",
    "metadata": {},
    "outputs": [],
@@ -895,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "id": "b81ac13d",
    "metadata": {},
    "outputs": [
@@ -924,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "id": "9851c1d5",
    "metadata": {},
    "outputs": [
@@ -932,12 +947,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "y + x^{2} + y^{2}\n",
+       "y\\left( t \\right) + \\left( x\\left( t \\right) \\right)^{2} + \\left( y\\left( t \\right) \\right)^{2}\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "y + x^2 + y^2"
+       "y(t) + x(t)^2 + y(t)^2"
       ]
      },
      "metadata": {},
@@ -959,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "id": "4b345a70",
    "metadata": {},
    "outputs": [],
@@ -980,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "id": "27fbcd1f",
    "metadata": {},
    "outputs": [
@@ -988,12 +1003,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "2 x\n",
+       "2 x\\left( t \\right)\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "2x"
+       "2x(t)"
       ]
      },
      "metadata": {},
@@ -1040,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "id": "c523e3c2",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "id": "b5645919",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "id": "f449af6a",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "id": "c86ade3c",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 38,
    "id": "02bc879d",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 39,
    "id": "e479b6e1",
    "metadata": {},
    "outputs": [
@@ -1273,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "id": "89f1431b",
    "metadata": {},
    "outputs": [
@@ -1296,9 +1311,9 @@
    "id": "a78c83a7",
    "metadata": {},
    "source": [
-    "#### Base.:\\ — Method.\n",
+    "#### Base divison Method.\n",
     "\n",
-    "Left division operator:  $\\(x, y)$ denotes multiplication of y by the inverse of x on the left. \n",
+    "Left division operator: \\ $(x, y)$  denotes multiplication of y by the inverse of x on the left. \n",
     "Gives floating-point results for integer arguments."
    ]
   },
@@ -1384,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 45,
    "id": "aa8e67cf",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 46,
    "id": "b38e22b8",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 47,
    "id": "74e4f3af",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "id": "a5b3bda5",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 49,
    "id": "ff1f8ce1",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 54,
    "id": "02ea4c45",
    "metadata": {},
    "outputs": [
@@ -1658,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 55,
    "id": "113006fb",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 56,
    "id": "df84172d",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 57,
    "id": "99d7f042",
    "metadata": {},
    "outputs": [
