--- a/IntroductionToJulia_CAD_LAB/CAD_Lab_4.ipynb
+++ b/IntroductionToJulia_CAD_LAB/CAD_Lab_4.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ec020cf4",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "2440b2c0",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "1ac93fd6",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "id": "08002329",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "2dc519b9",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "cb9cbd2c",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "id": "1b36a7f2",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "b2fbb701",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "552b95ea",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "8cf1d71c",
    "metadata": {},
    "outputs": [
@@ -383,12 +383,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "1 + 2 t\n",
+       "2\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "1 + 2t"
+       "2"
       ]
      },
      "metadata": {},
@@ -396,12 +396,12 @@
     }
    ],
    "source": [
-    "expand_derivatives(D(z)) "
+    "expand_derivatives(D(D(z))) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "25159849",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "b81ac13d",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "9851c1d5",
    "metadata": {},
    "outputs": [
@@ -947,12 +947,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "y\\left( t \\right) + \\left( x\\left( t \\right) \\right)^{2} + \\left( y\\left( t \\right) \\right)^{2}\n",
+       "y + x^{2} + y^{2}\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "y(t) + x(t)^2 + y(t)^2"
+       "y + x^2 + y^2"
       ]
      },
      "metadata": {},
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "4b345a70",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "27fbcd1f",
    "metadata": {},
    "outputs": [
@@ -1003,12 +1003,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "2 x\\left( t \\right)\n",
+       "2 x\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "2x(t)"
+       "2x"
       ]
      },
      "metadata": {},
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "b3725a72",
    "metadata": {},
    "outputs": [
@@ -1029,12 +1029,12 @@
      "data": {
       "text/latex": [
        "$$ \\begin{equation}\n",
-       "1 + 2 y\\left( t \\right)\n",
+       "1 + 2 y\n",
        "\\end{equation}\n",
        " $$"
       ],
       "text/plain": [
-       "1 + 2y(t)"
+       "1 + 2y"
       ]
      },
      "metadata": {},
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "f449af6a",
    "metadata": {},
    "outputs": [
@@ -1821,6 +1821,469 @@
    ],
    "source": [
     "Bidiagonal(A, :L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4575e5ea",
+   "metadata": {},
+   "source": [
+    "### Transformation Matrix Estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "41a08e91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@variables x₁ x₂ y₁ y₂\n",
+    "@variables γ₁ γ₂\n",
+    "@variables a₀ a₁ a₂ a₃;\n",
+    "@variables b₀ b₁ b₂ b₃;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "297b0109",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\mathtt{a{_0}} + \\mathtt{a{_1}} \\mathtt{x{_1}} + \\mathtt{a{_2}} \\mathtt{x{_2}} + \\mathtt{a{_3}} \\mathtt{x{_1}} \\mathtt{x{_2}}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "a₀ + a₁*x₁ + a₂*x₂ + a₃*x₁*x₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y₁ = a₀ + a₁*x₁ + a₂*x₂ + a₃*x₁*x₂"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e097b36e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(a₀, a₀ + a₁, a₀ + a₂, a₀ + a₁ + a₂ + a₃)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eq1 = substitute.(y₁, (Dict(x₁ => 0, x₂ => 0),Dict(x₁ => 1, x₂ => 0),Dict(x₁ => 0, x₂ => 1),Dict(x₁ => 1, x₂ => 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "04674ad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{align}\n",
+       "\\mathtt{a{_0}} &= 0 \\\\\n",
+       "\\mathtt{a{_0}} + \\mathtt{a{_1}} &= 1 \\\\\n",
+       "\\mathtt{a{_0}} + \\mathtt{a{_2}} &= 0 \\\\\n",
+       "\\mathtt{a{_0}} + \\mathtt{a{_1}} + \\mathtt{a{_2}} + \\mathtt{a{_3}} &= 1 + \\mathtt{\\gamma{_1}}\n",
+       "\\end{align}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "4-element Vector{Equation}:\n",
+       " a₀ ~ 0\n",
+       " a₀ + a₁ ~ 1\n",
+       " a₀ + a₂ ~ 0\n",
+       " a₀ + a₁ + a₂ + a₃ ~ 1 + γ₁"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "EqVec1 = [eq1[1]~0, eq1[2]~1, eq1[3]~0, eq1[4]~1+γ₁]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "14567fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Any}:\n",
+       " -0.0\n",
+       "  1.0\n",
+       " -0.0\n",
+       "   γ₁"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "aVecVal = Symbolics.solve_for(EqVec1,[a₀, a₁, a₂, a₃])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "6eec6707",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\mathtt{x{_1}} + \\mathtt{x{_1}} \\mathtt{x{_2}} \\mathtt{\\gamma{_1}}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "x₁ + x₁*x₂*γ₁"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y₁ = aVecVal[1] + aVecVal[2]*x₁ + aVecVal[3]*x₂ + aVecVal[4]*x₁*x₂"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5829c73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\mathtt{b{_0}} + \\mathtt{b{_1}} \\mathtt{x{_1}} + \\mathtt{b{_2}} \\mathtt{x{_2}} + \\mathtt{b{_3}} \\mathtt{x{_1}} \\mathtt{x{_2}}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "b₀ + b₁*x₁ + b₂*x₂ + b₃*x₁*x₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y₂ =b₀ + b₁*x₁ + b₂*x₂ + b₃*x₁*x₂"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1452a9cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(b₀, b₀ + b₁, b₀ + b₂, b₀ + b₁ + b₂ + b₃)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eq2 = substitute.(y₂, (Dict(x₁ => 0, x₂ => 0),Dict(x₁ => 1, x₂ => 0),Dict(x₁ => 0, x₂ => 1),Dict(x₁ => 1, x₂ => 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c53b80dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{align}\n",
+       "\\mathtt{b{_0}} &= 0 \\\\\n",
+       "\\mathtt{b{_0}} + \\mathtt{b{_1}} &= 0 \\\\\n",
+       "\\mathtt{b{_0}} + \\mathtt{b{_2}} &= 1 \\\\\n",
+       "\\mathtt{b{_0}} + \\mathtt{b{_1}} + \\mathtt{b{_2}} + \\mathtt{b{_3}} &= 1 + \\mathtt{\\gamma{_2}}\n",
+       "\\end{align}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "4-element Vector{Equation}:\n",
+       " b₀ ~ 0\n",
+       " b₀ + b₁ ~ 0\n",
+       " b₀ + b₂ ~ 1\n",
+       " b₀ + b₁ + b₂ + b₃ ~ 1 + γ₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "EqVec2 = [eq2[1]~0, eq2[2]~0, eq2[3]~1, eq2[4]~1+γ₂]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "0fbefbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Any}:\n",
+       " -0.0\n",
+       " -0.0\n",
+       "  1.0\n",
+       "   γ₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "bVecVal = Symbolics.solve_for(EqVec2,[b₀, b₁, b₂, b₃])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "46c43bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\mathtt{x{_2}} + \\mathtt{x{_1}} \\mathtt{x{_2}} \\mathtt{\\gamma{_2}}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "x₂ + x₁*x₂*γ₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y₂ = bVecVal[1] + bVecVal[2]*x₁ + bVecVal[3]*x₂ + bVecVal[4]*x₁*x₂"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "aff133c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\left[\n",
+       "\\begin{array}{c}\n",
+       "\\mathtt{x{_1}} + \\mathtt{x{_1}} \\mathtt{x{_2}} \\mathtt{\\gamma{_1}} \\\\\n",
+       "\\mathtt{x{_2}} + \\mathtt{x{_1}} \\mathtt{x{_2}} \\mathtt{\\gamma{_2}} \\\\\n",
+       "\\end{array}\n",
+       "\\right]\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "2-element Vector{Num}:\n",
+       " x₁ + x₁*x₂*γ₁\n",
+       " x₂ + x₁*x₂*γ₂"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "χ = ([y₁, y₂])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f150d6e2",
+   "metadata": {},
+   "source": [
+    "### Strain Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "61db957e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@variables x y l lₒ aₒ a₁;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "44aff58a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\mathtt{a{_o}} + \\mathtt{a{_1}} x\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "aₒ + a₁*x"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y = aₒ + a₁*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "ac478def",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(aₒ, aₒ + a₁*lₒ)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eq = substitute.(y, (Dict(x => 0),Dict(x => lₒ)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9a55259f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{align}\n",
+       "\\mathtt{a{_o}} &= 0 \\\\\n",
+       "\\mathtt{a{_o}} + \\mathtt{a{_1}} \\mathtt{l{_o}} &= l\n",
+       "\\end{align}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "2-element Vector{Equation}:\n",
+       " aₒ ~ 0\n",
+       " aₒ + a₁*lₒ ~ l"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Eq = [eq[1]~0, eq[2]~l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "b54adbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Any}:\n",
+       " -0.0\n",
+       "   l / lₒ"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "B = Symbolics.solve_for(Eq,[aₒ, a₁])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "ecfefbe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$ \\begin{equation}\n",
+       "\\frac{l x}{\\mathtt{l{_o}}}\n",
+       "\\end{equation}\n",
+       " $$"
+      ],
+      "text/plain": [
+       "(l*x) / lₒ"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "y = B[1] + B[2]*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8613a1a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eq = substitute.(y, (Dict(l => 10, lₒ => 7)))"
    ]
   }
  ],
