--- a/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
+++ b/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4de21a4f-5c93-4dd4-923a-0d72e9e9b4b8",
    "metadata": {},
    "outputs": [
@@ -251,8 +251,33 @@
     "\n",
     "#Launch GUI or Finalize (Launch the GUI to visualize the mesh or finalize the Gmsh API:)\n",
     "gmsh.fltk.run()  # Launch GUI\n",
+    "\n",
     "# or \n",
     "gmsh.finalize() # Finalize Gmsh API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f908f955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Gmsh.gmsh.model: addPhysicalGroup\n",
+    "@which gmsh.model.addPhysicalGroup\n",
+    "methods(gmsh.model.addPhysicalGroup) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35a71e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Gmsh.gmsh.model.mesh: generate\n",
+    "@which generate\n",
+    "methods(gmsh.model.mesh.generate) "
    ]
   },
   {
