--- a/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
+++ b/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
@@ -145,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e649def1-6523-4ba4-863c-7d36946ac456",
    "metadata": {},
    "outputs": [],
    "source": [
     "# input parameters\n",
-    "L = 2;\n",
-    "H = 1;\n",
-    "h = 0.25;"
+    "L = 2;        # Length\n",
+    "H = 1;          # Breadth\n",
+    "h = 0.25;       # Height"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4de21a4f-5c93-4dd4-923a-0d72e9e9b4b8",
    "metadata": {},
    "outputs": [
@@ -171,10 +171,10 @@
       "Info    : [ 30%] Meshing curve 2 (Line)\n",
       "Info    : [ 60%] Meshing curve 3 (Line)\n",
       "Info    : [ 80%] Meshing curve 4 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.003721s, CPU 0s)\n",
+      "Info    : Done meshing 1D (Wall 0.000255108s, CPU 0s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0189369s, CPU 0.015625s)\n",
+      "Info    : Done meshing 2D (Wall 0.00103617s, CPU 0s)\n",
       "Info    : 56 nodes 114 elements\n",
       "Info    : Writing './Model\\rectangle.msh'...\n",
       "Info    : Done writing './Model\\rectangle.msh'\n",
@@ -258,6 +258,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "ba89710c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Reading 'c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\IntroductionToJulia_CAD_LAB\\Model\\rectangle.msh'...\n",
+      "Info    : 9 entities\n",
+      "Info    : 56 nodes\n",
+      "Info    : 110 elements\n",
+      "Info    : Done reading 'c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\IntroductionToJulia_CAD_LAB\\Model\\rectangle.msh'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UnstructuredDiscreteModel()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using GridapGmsh\n",
+    "# Recalling the model\n",
+    "mesh_name = \"rectangle.msh\"\n",
+    "mesh_file = joinpath(@__DIR__, \"Model\", mesh_name)\n",
+    "isfile(mesh_file) || error(\"Path does not exist: $mesh_file\")\n",
+    "model = GmshDiscreteModel(mesh_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d32e132b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Physical groups (cell tags): UnstructuredDiscreteModel()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inspect physical groups if you need to find boundary names:\n",
+    "println(\"Physical groups (cell tags): \", model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f908f955",
    "metadata": {},
@@ -301,10 +356,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "98b7d8f1-b2d3-4a5a-b3ae-739e15aff0b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "Msh file not found: rectangle.msh",
+     "output_type": "error",
+     "traceback": [
+      "Msh file not found: rectangle.msh\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] error(s::String)\n",
+      "   @ Base .\\error.jl:35\n",
+      " [2] GmshDiscreteModel(mshfile::String; renumber::Bool, has_affine_map::Nothing, orient_if_simplex::Nothing)\n",
+      "   @ GridapGmsh C:\\Users\\IIT BBSR\\.julia\\packages\\GridapGmsh\\Iih5l\\src\\GmshDiscreteModels.jl:15\n",
+      " [3] GmshDiscreteModel\n",
+      "   @ C:\\Users\\IIT BBSR\\.julia\\packages\\GridapGmsh\\Iih5l\\src\\GmshDiscreteModels.jl:12 [inlined]\n",
+      " [4] DiscreteModelFromFile\n",
+      "   @ C:\\Users\\IIT BBSR\\.julia\\packages\\GridapGmsh\\Iih5l\\src\\GmshDiscreteModels.jl:992 [inlined]\n",
+      " [5] DiscreteModelFromFile(filename::String)\n",
+      "   @ Gridap.Geometry C:\\Users\\IIT BBSR\\.julia\\packages\\Gridap\\dk0DA\\src\\Geometry\\DiscreteModels.jl:414\n",
+      " [6] top-level scope\n",
+      "   @ c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\IntroductionToJulia_CAD_LAB\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:5"
+     ]
+    }
+   ],
    "source": [
     "# Create the folder (if it doesn't exist)\n",
     "write_dir = \"./Model\"\n",
@@ -366,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6a6ac388-5773-450e-9589-9d87f7418773",
    "metadata": {},
    "outputs": [],
@@ -378,102 +456,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dc86ac24-72d9-4a02-8024-471a130d3cb4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Info    : Meshing 1D...\n",
-      "Info    : [  0%] Meshing curve 1 (Line)\n",
-      "Info    : [ 10%] Meshing curve 2 (Line)\n",
-      "Info    : [ 20%] Meshing curve 3 (Line)\n",
-      "Info    : [ 30%] Meshing curve 4 (Line)\n",
-      "Info    : [ 40%] Meshing curve 6 (Line)\n",
-      "Info    : [ 50%] Meshing curve 7 (Line)\n",
-      "Info    : [ 60%] Meshing curve 8 (Line)\n",
-      "Info    : [ 60%] Meshing curve 9 (Line)\n",
-      "Info    : [ 70%] Meshing curve 11 (Line)\n",
-      "Info    : [ 80%] Meshing curve 12 (Line)\n",
-      "Info    : [ 90%] Meshing curve 16 (Line)\n",
-      "Info    : [100%] Meshing curve 20 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.000742912s, CPU 0.015625s)\n",
-      "Info    : Meshing 2D...\n",
-      "Info    : [  0%] Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : [ 20%] Meshing surface 13 (Surface, Frontal-Delaunay)\n",
-      "Info    : [ 40%] Meshing surface 17 (Surface, Frontal-Delaunay)\n",
-      "Info    : [ 60%] Meshing surface 21 (Surface, Frontal-Delaunay)\n",
-      "Info    : [ 70%] Meshing surface 25 (Surface, Frontal-Delaunay)\n",
-      "Info    : [ 90%] Meshing surface 26 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.0367608s, CPU 0.03125s)\n",
-      "Info    : Meshing 3D...\n",
-      "Info    : 3D Meshing 1 volume with 1 connected component\n",
-      "Info    : Tetrahedrizing 864 nodes...\n",
-      "Info    : Done tetrahedrizing 872 nodes (Wall 0.013633s, CPU 0.015625s)\n",
-      "Info    : Reconstructing mesh...\n",
-      "Info    :  - Creating surface mesh\n",
-      "Info    :  - Identifying boundary edges\n",
-      "Info    :  - Recovering boundary\n",
-      "Info    : Done reconstructing mesh (Wall 0.0317349s, CPU 0.03125s)\n",
-      "Info    : Found volume 1\n",
-      "Info    : It. 0 - 0 nodes created - worst tet radius 2.67295 (nodes removed 0 0)\n",
-      "Info    : 3D refinement terminated (1271 nodes total):\n",
-      "Info    :  - 0 Delaunay cavities modified for star shapeness\n",
-      "Info    :  - 0 nodes could not be inserted\n",
-      "Info    :  - 5100 tetrahedra created in 0.0289979 sec. (175874 tets/s)\n",
-      "Info    : 0 node relocations\n",
-      "Info    : Done meshing 3D (Wall 0.0988731s, CPU 0.09375s)\n",
-      "Info    : Optimizing mesh...\n",
-      "Info    : Optimizing volume 1\n",
-      "Info    : Optimization starts (volume = 1) with worst = 0.011185 / average = 0.764512:\n",
-      "Info    : 0.00 < quality < 0.10 :        13 elements\n",
-      "Info    : 0.10 < quality < 0.20 :        41 elements\n",
-      "Info    : 0.20 < quality < 0.30 :        62 elements\n",
-      "Info    : 0.30 < quality < 0.40 :        84 elements\n",
-      "Info    : 0.40 < quality < 0.50 :       127 elements\n",
-      "Info    : 0.50 < quality < 0.60 :       221 elements\n",
-      "Info    : 0.60 < quality < 0.70 :       722 elements\n",
-      "Info    : 0.70 < quality < 0.80 :      1383 elements\n",
-      "Info    : 0.80 < quality < 0.90 :      1664 elements\n",
-      "Info    : 0.90 < quality < 1.00 :       779 elements\n",
-      "Info    : 116 edge swaps, 3 node relocations (volume = 1): worst = 0.301775 / average = 0.779499 (Wall 0.00231409s, CPU 0s)\n",
-      "Info    : No ill-shaped tets in the mesh :-)\n",
-      "Info    : 0.00 < quality < 0.10 :         0 elements\n",
-      "Info    : 0.10 < quality < 0.20 :         0 elements\n",
-      "Info    : 0.20 < quality < 0.30 :         0 elements\n",
-      "Info    : 0.30 < quality < 0.40 :        82 elements\n",
-      "Info    : 0.40 < quality < 0.50 :       118 elements\n",
-      "Info    : 0.50 < quality < 0.60 :       211 elements\n",
-      "Info    : 0.60 < quality < 0.70 :       714 elements\n",
-      "Info    : 0.70 < quality < 0.80 :      1389 elements\n",
-      "Info    : 0.80 < quality < 0.90 :      1696 elements\n",
-      "Info    : 0.90 < quality < 1.00 :       777 elements\n",
-      "Info    : Done optimizing mesh (Wall 0.00851202s, CPU 0.015625s)\n",
-      "Info    : 1271 nodes 6863 elements\n",
-      "Info    : Writing './Model\\brick.msh'...\n",
-      "Info    : Done writing './Model\\brick.msh'\n",
-      "-------------------------------------------------------\n",
-      "Version       : 4.13.1\n",
-      "License       : GNU General Public License\n",
-      "Build OS      : Windows64-sdk\n",
-      "Build date    : 19700101\n",
-      "Build host    : amdci7.julia.csail.mit.edu\n",
-      "Build options : 64Bit ALGLIB[contrib] ANN[contrib] Bamg Blossom Cairo DIntegration DomHex Eigen[contrib] Fltk GMP Gmm[contrib] Hxt Jpeg Kbipack MathEx[contrib] Mesh Metis[contrib] Mmg Mpeg Netgen Nii2mesh NoSocklenT ONELAB ONELABMetamodel OpenCASCADE OpenCASCADE-CAF OpenGL OpenMP OptHom Parser Plugins Png Post QuadMeshingTools QuadTri Solver TetGen/BR TinyXML2[contrib] Untangle Voro++[contrib] WinslowUntangler Zlib\n",
-      "FLTK version  : 1.3.8\n",
-      "OCC version   : 7.7.2\n",
-      "Packaged by   : root\n",
-      "Web site      : https://gmsh.info\n",
-      "Issue tracker : https://gitlab.onelab.info/gmsh/gmsh/issues\n",
-      "-------------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : Gmsh has aleady been initialized\n"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `W` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `W` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\IntroductionToJulia_CAD_LAB\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X36sZmlsZQ==.jl:12"
      ]
     }
    ],
