--- a/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
+++ b/IntroductionToJulia_CAD_LAB/CAD_Lab_5.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2a652bbf-f22a-47b5-b9d1-1eefc1d621a9",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "90bbf6c7-ca12-4a86-b334-9c07725899b4",
    "metadata": {},
    "outputs": [
@@ -583,10 +583,10 @@
       "Info    : [ 30%] Meshing curve 2 (Circle)\n",
       "Info    : [ 60%] Meshing curve 3 (Circle)\n",
       "Info    : [ 80%] Meshing curve 4 (Circle)\n",
-      "Info    : Done meshing 1D (Wall 0.00107431s, CPU 0s)\n",
+      "Info    : Done meshing 1D (Wall 0.000882864s, CPU 0s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.015702s, CPU 0.015625s)\n",
+      "Info    : Done meshing 2D (Wall 0.0109248s, CPU 0.015625s)\n",
       "Info    : 353 nodes 709 elements\n",
       "Info    : Meshing order 2 (curvilinear on)...\n",
       "Info    : [  0%] Meshing curve 1 order 2\n",
@@ -595,7 +595,7 @@
       "Info    : [ 70%] Meshing curve 4 order 2\n",
       "Info    : [ 90%] Meshing surface 1 order 2\n",
       "Info    : Surface mesh: worst distortion = 0.886002 (0 elements in ]0, 0.2]); worst gamma = 0.854794\n",
-      "Info    : Done meshing order 2 (Wall 0.00337505s, CPU 0s)\n",
+      "Info    : Done meshing order 2 (Wall 0.0065949s, CPU 0s)\n",
       "Info    : Writing './Model\\annular_ring.msh'...\n",
       "Info    : Done writing './Model\\annular_ring.msh'\n",
       "-------------------------------------------------------\n",
@@ -611,6 +611,13 @@
       "Web site      : https://gmsh.info\n",
       "Issue tracker : https://gitlab.onelab.info/gmsh/gmsh/issues\n",
       "-------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : Gmsh has aleady been initialized\n"
      ]
     }
    ],
@@ -752,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6d083bc2-3387-464f-b526-c043ca1cb174",
    "metadata": {},
    "outputs": [],
@@ -774,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "3664e2f9-f350-4ada-ba11-6de5298cd78b",
    "metadata": {},
    "outputs": [
@@ -795,10 +802,10 @@
       "Info    : [ 80%] Meshing curve 10 (Line)\n",
       "Info    : [ 90%] Meshing curve 11 (Circle)\n",
       "Info    : [100%] Meshing curve 12 (Circle)\n",
-      "Info    : Done meshing 1D (Wall 0.0509481s, CPU 0.0625s)\n",
+      "Info    : Done meshing 1D (Wall 0.051903s, CPU 0.046875s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 2.68146s, CPU 2.5625s)\n",
+      "Info    : Done meshing 2D (Wall 2.31288s, CPU 2.07812s)\n",
       "Info    : 45313 nodes 90235 elements\n",
       "Info    : Writing './Model\\NotchedPlateWithHole.msh'...\n",
       "Info    : Done writing './Model\\NotchedPlateWithHole.msh'\n",
