--- a/CAD_Lab_Assignments/A2/Question_4/Q4.ipynb
+++ b/CAD_Lab_Assignments/A2/Question_4/Q4.ipynb
@@ -4,13 +4,33 @@
    "cell_type": "markdown",
    "id": "fff84547",
    "metadata": {},
-   "source": []
+   "source": [
+    "# CAD Laboratory (CE4P001) - Assignment No. 2\n",
+    "\n",
+    "\n",
+    "**Name:** Amiya Das  <br>\n",
+    "**Roll No.:** 22CE01057 <br>"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1f4f3cc0",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3>Question-4</h3>\n",
+    "\n",
+    "Find out the stress distribution by modeling the given rectangular plate of 2 mm thick with a circular hole. The dimensions of the steel plate and hole are shown in Figure 1. The section is made up of steel having a value of **210 GPa** for Young's modulus and a value of **0.3** for Poisson's ratio.\n",
+    "\n",
+    "![image.png](attachment:c375cf8e-3893-4e73-ad1a-8b3d06eabb55.png)\n",
+    "\n",
+    "<div style=\"margin-left: 40px\">\n",
+    "\n",
+    "(a) Provide the steps for finite element meshing both in Julia and Abaqus. <br>\n",
+    "(b) Mention the governing PDEs that are required to solve for the stress distribution. <br>\n",
+    "(c) Provide a comparison between the results obtained from Gridap in Julia and Abaqus.\n",
+    "\n",
+    "</div>"
+   ]
   },
   {
    "cell_type": "code",
@@ -29,10 +49,10 @@
       "Info    : [ 60%] Meshing curve 4 (Line)\n",
       "Info    : [ 70%] Meshing curve 5 (Circle)\n",
       "Info    : [ 90%] Meshing curve 6 (Circle)\n",
-      "Info    : Done meshing 1D (Wall 0.00518107s, CPU 0s)\n",
+      "Info    : Done meshing 1D (Wall 0.00636292s, CPU 0s)\n",
       "Info    : Meshing 2D...\n",
       "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
-      "Info    : Done meshing 2D (Wall 0.041728s, CPU 0.03125s)\n",
+      "Info    : Done meshing 2D (Wall 0.0347841s, CPU 0.015625s)\n",
       "Info    : 598 nodes 1201 elements\n",
       "Info    : Writing './Model\\Plate_hole.msh'...\n",
       "Info    : Done writing './Model\\Plate_hole.msh'\n",
@@ -177,11 +197,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info    : Reading 'c:\\Users\\amiya\\OneDrive\\Desktop\\BTP\\CAD_LAB\\CAD_Lab_Assignments\\A2\\Question_4\\Model\\Plate_hole.msh'...\n",
+      "Info    : Reading 'c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\CAD_Lab_Assignments\\A2\\Question_4\\Model\\Plate_hole.msh'...\n",
       "Info    : 14 entities\n",
       "Info    : 597 nodes\n",
       "Info    : 1178 elements\n",
-      "Info    : Done reading 'c:\\Users\\amiya\\OneDrive\\Desktop\\BTP\\CAD_LAB\\CAD_Lab_Assignments\\A2\\Question_4\\Model\\Plate_hole.msh'\n"
+      "Info    : Done reading 'c:\\Users\\IIT BBSR\\Desktop\\Amiya\\CAD_Lab\\CAD_Lab_Assignments\\A2\\Question_4\\Model\\Plate_hole.msh'\n"
      ]
     },
     {
@@ -213,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1d106e80",
    "metadata": {},
    "outputs": [
@@ -253,10 +273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "87c350aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TrialFESpace()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "order = 1\n",
     "\n",
@@ -272,10 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "28d95cc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GenericMeasure()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "degree = 2*order\n",
     "Ω = Triangulation(model)\n",
@@ -286,10 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "27515ca7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "l (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Weak from\n",
     "\n",
@@ -302,10 +352,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "da9864f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SingleFieldFEFunction():\n",
+       " num_cells: 1082\n",
+       " DomainStyle: ReferenceDomain()\n",
+       " Triangulation: BodyFittedTriangulation()\n",
+       " Triangulation id: 8254605993968048815"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Solve\n",
     "op = AffineFEOperator(a,l,U,V0)\n",
@@ -314,10 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e6649a9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"c:\\\\Users\\\\IIT BBSR\\\\Desktop\\\\Amiya\\\\CAD_Lab\\\\CAD_Lab_Assignments\\\\A2\\\\Question_4\\\\..\\\\..\\\\..\\\\..\\\\Model\\\\Q_4\\\\Result\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# create vtu file for checkup\n",
     "result_path = joinpath(@__DIR__, \"..\", \"..\", \"..\", \"..\", \"Model\", \"Q_4\", \"Result\")\n",
@@ -326,10 +400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "375dc383",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([\"c:\\\\Users\\\\IIT BBSR\\\\Desktop\\\\Amiya\\\\CAD_Lab\\\\CAD_Lab_Assignments\\\\A2\\\\Question_4\\\\..\\\\..\\\\..\\\\..\\\\Model\\\\Q_4\\\\Result\\\\results_1.vtu\"],)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "writevtk(Ω,joinpath(result_path, \"results_1\"),\n",
     "    cellfields=[\n",
